2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc (isvar): Fix tests.

2009-06-08  Jaroslav Hajek  <highegg@gmail.com>, David Grundberg  <individ@acc.umu.se>

	* octave_to_python.cc (copy_octarray_to_pyarrobj<PyObject *,
	Cell>): New template specialization.
	(createPyArr): Simplify row vectors to 1D arrays.
	(octvalue_to_pyarrobj): Add string and cell cases.
	(octcell_to_pyobject): Create a PyObject array if not row vector.
	(octmap_to_pyobject): Create a simple dict if scalar struct.
	(octvalue_to_pyobj): Allow converting arbitrary character matrices.
	* python_to_octave.cc (pydict_to_octmap): Make scalar structs by
	default, detect matching dimensions.
	* package/pytave.py (feval): Update doc string.
	(getvar, setvar, isvar): Remove.
	(_VariablesDict): New class.
	(locals, globals): Default instances.
	(_local_scope): Rename to _LocalScope
	* test/test.py: New tests. Update old tests.
	(testsetget, testexception): New functions.

2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* python_to_octave.cc (copy_pyarrobj_to_octarray<PyObject *,
	Cell>): New template specialization.
	(matching_type<PyObject *, octave_value>): Ditto.
	(copy_pyarrobj_to_octarray_boot): Include PyArray_CHAR
	and PyArray_Object cases.
	(pyarr_to_octvalue): Likewise.
	* test/test.py: Add tests for the new conversions.

2009-06-03  David Grundberg  <individ@acc.umu.se>

	* octave_to_python.cc (create_uint_array, create_sint_array):
	Prefer int to other datatypes of identical size.
	(is_1xn_or_0x0): Whitespace.
	* python_to_octave.cc (copy_pyarrobj_to_octarray_dispatch): Prefer
	int to other datatypes of identical size.

2009-05-28  Jaroslav Hajek  <highegg@gmail.com>

	* configure.ac: Remove --enable-float-matrices option.
	* octave_to_python.cc: Remove uses of PYTAVE_USE_OCTAVE_FLOAT.
	* python_to_octave.cc: Ditto.

2009-05-26  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc (octvalue_to_pyarrobj): Support Complex
	and FloatComplex values.